--- a/index.css
+++ b/index.css
@@ -35,8 +35,11 @@ body {
 
 .work {
   width: 200px;
+  height: 160px;
   text-align: center;
   margin: 0 30px 30px 0;
+  position: relative;
+  background: #000;
 }
 
 @media screen and (max-width: 800px) {
@@ -53,4 +56,26 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.work:hover img {
+  opacity: 0.2;
+}
+
+.work:hover .work-detail {
+  display:inline;
+}
+
+.work-detail {
+  position: absolute;
+  display:none;
+  top: 0;
+  left: 0;
+  padding: 5px;
+  font-size: 12px;
+  color: white;
+}
+
+.work-title {
+  font-size: 16px;
 }
