--- a/index.css
+++ b/index.css
@@ -51,10 +51,10 @@ body {
   background: #000;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   .work {
-    width: 400px!important;
-    height: 320px!important;
+    width: 90vw!important;
+    height: 60vw!important;
     margin-left: 0!important;
     margin-right: 0!important;
   }
