--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
   font-family: 'Dosis', "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", cursive;
   font-weight: normal;
   letter-spacing: 3px;
+  color: #232323;
 }
 a {
   color: gray;
