--- a/index.css
+++ b/index.css
@@ -115,3 +115,41 @@ body {
   margin-top: 40px!important;
   font-weight: bold;
 }
+
+.profile-icon {
+  width: 80px;
+  height: 80px;
+  border-radius: 100px;
+}
+
+.center {
+  text-align: center;
+}
+
+.profile-flex {
+  margin-top: 130px;
+  display: flex;
+  width: 520px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile-text {
+  width: 100%;
+  margin: 0;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 520px) {
+  .profile-flex {
+    width: 85%;
+  }
+
+  .profile-icon {
+    display: none;
+  }
+}
+.profile-name {
+  font-size: 18px;
+  font-weight: normal;
+}
