--- a/interview.css
+++ b/interview.css
@@ -43,3 +43,20 @@
   padding: 5px;
 }
 
+.center {
+  text-align: center;
+}
+
+.title {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(0,0,0,0.3);
+  font-size: 18px;
+  color: #DDD;
+  height: 30px;
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  
+}
