--- a/interview.css
+++ b/interview.css
@@ -1,9 +1,12 @@
 
+body {
+  background-color: #BCE;
+}
+
 .chat {
-  width: 100%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #BCE;
   padding-top: 20px;
   padding-bottom: 20px;
 }
