--- a/interview.css
+++ b/interview.css
@@ -9,9 +9,11 @@ body {
   margin-right: auto;
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: green;
 }
 
 .message {
+  background-color: blue;
   display: flex;
   display: -webkit-flex;
   -webkit-justify-content: left;
@@ -38,6 +40,7 @@ body {
 }
 
 .my-message {
+  background-color: red;
   display: flex;
   margin-bottom: 10px;
   -webkit-justify-content: right;
