--- a/interview.css
+++ b/interview.css
@@ -41,8 +41,8 @@ body {
   display: -webkit-flex;
   display: flex;
   margin-bottom: 10px;
-  -webkit-justify-content: right;
-  justify-content: right;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .my-message .message-text {
