--- a/interview.css
+++ b/interview.css
@@ -60,7 +60,7 @@ body {
   margin-right: auto;
   background-color: rgba(0,0,0,0.3);
   font-size: 18px;
-  color: #DDD;
+  color: #EEE;
   height: 30px;
   border-radius: 15px;
   padding-left: 10px;
