--- a/interview.css
+++ b/interview.css
@@ -29,7 +29,7 @@ body {
 }
 
 .message-text {
-  background-color: #00B900;
+  background-color: #8ED156;
   color: black;
   border-radius: 10px;
   line-height: 25px;
