--- a/index.css
+++ b/index.css
@@ -83,9 +83,9 @@ body {
   letter-spacing: 1px!important;
   position: absolute;
   display:none;
-  top: 0;
+  top: 14px;
   left: 0;
-  padding: 3px;
+  padding: 0px 3px 3px 3px;
   font-size: 12px;
   color: white;
   text-align: center;
@@ -97,6 +97,14 @@ body {
   font-weight: bold;
   color: white;
   letter-spacing: 2px!important;
+  margin-bottom: 14px;
+}
+
+.work-detail p {
+  letter-spacing: 1px!important;
+  color: white;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 
