--- a/index.css
+++ b/index.css
@@ -132,3 +132,7 @@ body {
   text-decoration: underline!important;
   letter-spacing: 0px!important;
 }
+.dev-group {
+  text-decoration: underline!important;
+  letter-spacing: 0px!important;
+}
