--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ body {
   font-weight: bold;
 }
 
-.read-more {
+.read-more, .gpg {
   text-decoration: underline!important;
   letter-spacing: 0px!important;
 }
