--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
   text-align: center;
   margin-top: 130px;
   margin-bottom: 6px;
+  height: 30px;
 
 }
 
@@ -136,3 +137,27 @@ body {
   text-decoration: underline!important;
   letter-spacing: 0px!important;
 }
+
+@keyframes fadein {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fadeout {
+  0% {
+    height: 30px;
+    opacity: 0;
+  }
+  100% {
+    height: 30px;
+    opacity: 1;
+  }
+}
+.name {
+  animation: fadein 2s ease 3s 1 forwards, fadeout 2s ease 6s 1 forwards;
+}
+
+
